fixed navbar alignment

--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -6,6 +6,7 @@ $navbar-width: 15.25rem;
 $dm-red: rgb(255, 48, 64);
 
 .home_container {
+    $navbar-logo-height: 6.9375rem;
     display: none;
     width: 100vw;
     min-height: 100vh;
@@ -23,6 +24,7 @@ $dm-red: rgb(255, 48, 64);
 
         & > .navbar_logo {
             max-width: 63%;
+            height: $navbar-logo-height;
             user-select: none;
 
             & > img {
@@ -34,6 +36,9 @@ $dm-red: rgb(255, 48, 64);
         & > .navbar_links_container {
             @include flex(column, flex-start, center);
             gap: 1rem;
+            position: absolute;
+            top: $navbar-logo-height;
+            width: 100%;
 
             & > div {
                 @include flex(row, flex-start, center);
